--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - To-Do List Organizer</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <style>
+        #error-message {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -16,7 +21,7 @@
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
-        <div id="error-message" style="color: red;"></div>
+        <div id="error-message"></div>
     </main>
     <script>
         document.getElementById('login-form').addEventListener('submit', function(event) {
